--- a/pom.xml
+++ b/pom.xml
@@ -33,7 +33,7 @@
         <extensions>true</extensions>
         <configuration>
           <instructions>
-            <Export-Package />
+            <Export-Package>org.coderthoughts.service.spector</Export-Package>
           </instructions>
         </configuration>
       </plugin>
